# soldier-mvc-cplusplus

./: CMakeLists.txt  README.md  main.cpp
Enum/: WeaponType.hpp
Interface/: IView.hpp
Model/: Soldier.cpp  Soldier.hpp  Weapon.cpp  Weapon.hpp
Model/Weapon/: Revolver.cpp  Revolver.hpp  Rifle.cpp  Rifle.hpp  Shotgun.cpp  Shotgun.hpp
Presentation/: Presentation.cpp  Presentation.hpp
View/: View.cpp  View.hpp
